deu uma melhorada

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,25 @@ body {
     font-family: Bai Jamjuree;
 }
 
+#container {
+  display: flex;
+}
+
+.cartao {
+  margin: 1rem 1rem;
+  background-color: rgb(116, 69, 228);
+}
+
+
+
+
+
+
+
+
+
+
+
 footer {
   background-color: mediumblue;  
   color: aliceblue;
