--- a/assets/style.css
+++ b/assets/style.css
@@ -9,15 +9,27 @@ body {
 
 .cartao {
   margin: 1rem 1rem;
-  background-color: rgb(116, 69, 228);
+  background-color: rgb(69, 6, 216);
   height: 20rem;
   flex-grow: 1;
   flex-basis: calc(33% - 6rem);
 }
 
+.cartao__conteudo {
+  text-align: center;
+  background-color: rgb(150, 141, 236);
+  height: 100%;
+}
 
-
-
+.cartao__conteudo h3 {
+  background-color: brown ;
+  text-align: left;
+  padding: 0.5rem;
+  position: absolute;
+  margin: 0.6rem;
+  border-radius: 0.6rem;
+  font-size: 1vh;
+}
 
 
 
